add notes for replicate UTGen